TEST_PROGRAMS/VALID/05/loop_miss_1st_part.go
/* Three-part loop missing the first part. */

package main

func main() {
  	i := 0
  	for ; i < 10 ; i++ {

  	}
}
