TEST_PROGRAMS/INVALID/03/invalid_for1.go
package main
func main() { // Infinite loop
	for {
	}
	// "While" loop
	for x < 10 {
	}
	for ; x > 10; x-- {
	}
	for i := 0; i < 10; i++; {
	}
}
